# ros2-intel-unnati-smart-labeling

./: .gitignore  Dockerfile  README.md
src/smart_labeling_interfaces/: CMakeLists.txt  package.xml
src/smart_labeling_interfaces/msg/: ProcessStatus.msg  ProductInfo.msg  ValidationOutcome.msg
src/smart_labeling_interfaces/srv/: PredictLabelQuality.srv
src/smart_labeling_system_pkg/: package.xml  requirements.txt  setup.cfg  setup.py
src/smart_labeling_system_pkg/config/: products.csv  products_test.csv
src/smart_labeling_system_pkg/docker/: ros_entrypoint.sh
src/smart_labeling_system_pkg/launch/: system_launch.py
src/smart_labeling_system_pkg/nodes/: ai_validation_node.py  conductor_node.py  database_logger_node.py  dummy_action_completer_node.py  label_image_node.py  label_quality_ml_node.py  product_sequencer_node.py  pybullet_visualizer_node.py  ui_node.py
